tests/fuse/core/types/sized_int_cross_arith.fuse
// EXPECTED ERROR:
// error: mismatched numeric types in `+`: `Int` and `Float`
//        convert explicitly — no implicit coercion between numeric types
//   --> sized_int_cross_arith.fuse:15:13

// Arithmetic between distinct numeric types must be a type error.

extern fn fuse_rt_int32_new(n: Int) -> Int32
extern fn fuse_rt_uint8_new(n: Int) -> UInt8

@entrypoint
fn main() {
  val x: Int = 42
  val y: Float = 3.14
  val z = x + y
  println(f"{z}")
}
